--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<h2>Sign up</h2>
 
+<!--
+<h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -27,33 +28,43 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-
 <hr>
+-->
 
+
+<!-- Formulaire d'inscription -->
 <div class="container login-container">
-<div class="row">
+  <div class="row">
     <div class="col-md-6 offset-md-3 login-form-1"> 
     <h3>S'inscrire</h3>
-        <form>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              
+        <div class="form-group">
+              <%= f.email_field :email ,autofocus: true, autocomplete: "email" , class:"form-control" ,placeholder:"Votre email"%>
+        </div>
+
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <br/>
+            <%= f.password_field :password, autocomplete: "new-password" ,class:"form-control" ,placeholder:"Mot de passe" %>
+        </div>
+
+        <br/>
+
+        <div class="form-group">
+            <%= f.password_field :password_confirmation ,autocomplete: "new-password" ,class:"form-control" ,placeholder:"Confirmer"%>
+        </div>
+
+        <div class="form-group">
+            <%=f.submit "S'inscrire" ,class:"btn btn-primary btn-block" %>
+        </div> 
+        <%= render "devise/shared/links" %>
+      <% end %>
         
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nom" value="" />
-            </div>
-            <div class="form-group">
-                <input type="prenom" class="form-control" placeholder="Prenom" value="" />
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" value="" />
-            </div>
-            <div class="form-group">
-                <input type="mdp" class="form-control" placeholder="Mot de passe" value="" />
-            </div>
-            <div class="form-group">
-                <input type="submit" class="btnSubmit" value="S'inscrire" />
-            </div>
-            <div class="form-group">
-                <a href="#" class="ForgetPwd">Forget Password?</a>
-            </div>
-            
-        </form>
     </div>
+  </div>
+</div>
