--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,3 @@
-
 <!--
 <h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -31,14 +30,20 @@
 <hr>
 -->
 
-
-<!-- Formulaire d'inscription -->
-<div class="container login-container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3 login-form-1"> 
-    <h3>S'inscrire</h3>
-
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+ <button class="btn btn-secondary" id="essaie"> Valider </button>
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Sign Up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span arria-hidden="true" class="x-char">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="signin-modal">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
               
         <div class="form-group">
               <%= f.email_field :email ,autofocus: true, autocomplete: "email" , class:"form-control" ,placeholder:"Votre email"%>
@@ -59,12 +64,16 @@
             <%= f.password_field :password_confirmation ,autocomplete: "new-password" ,class:"form-control" ,placeholder:"Confirmer"%>
         </div>
 
-        <div class="form-group">
-            <%=f.submit "S'inscrire" ,class:"btn btn-primary btn-block" %>
-        </div> 
-        <%= render "devise/shared/links" %>
-      <% end %>
-        
+            <div class="actions form-group">
+              <%= f.submit "Sign Up",  class: "btn btn-block", style: "background-color: #C6CFF7;" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="close-modal btn" style="background-color: #D7DAE6;" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
