--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -1,45 +1,47 @@
-body{
-	padding-top:3rem;
-	padding-bottom: 3rem;
-	color: #5a5a5a;
-
+body {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    color: #5a5a5a;
 }
 
 .carousel-caption {
-	bottom:3rem;
-	z-index:10;
-}
-.carousel-item{
-	height: 32rem;
-	background-color: #777;
-}
-.carousel-item >img{
-	position:absolute;
-	top:0;
-	left:0;
-	min-width: 100%
-	height:32rem;
-
+    bottom: 3rem;
+    z-index: 10;
 }
 
-.marketing .col-lg-4{
-	margin-bottom: 1.5rem;
-	text-align: center;
+.carousel-item {
+    height: 32rem;
+    background-color: #777;
 }
 
-.marketing h2{
-	font-weight: 400;
-}
-.marketing .col-lg-4 p{
-	margin-right: .75rem;
-	margin-left: .75rem;
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    /* height:32rem; */
 }
 
-.featturette-divider{
-	margin: 5rem 0;
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
 }
-.featturette-heading{
-	font-weight: 300;
-	line-height: 1;
-	letter-spacing: -0.5rem;
+
+.marketing h2 {
+    font-weight: 400;
+}
+
+.marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+}
+
+.featturette-divider {
+    margin: 5rem 0;
+}
+
+.featturette-heading {
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -0.5rem;
 }
