Update login and logout Jquery

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,11 +25,11 @@
                 <ul class="dropdown-menu">
                   <div style="text-align: center;">Connexion</div>
                   <div class="dropdown-divider"></div>
-                  <li id="login"><a href="#">Log In</a></li>
-                  <li><a href="#">Log Out</a></li>
+                  <li><a href="#"  id="log-in" data-toggle="modal" data-target="#signinModal">Log In</a></li>
+                  <li id="sign-up" data-toggle="modal" data-target="#signupModal"><a href="#">Sign Up</a></li>
                 </ul>
             </div>
-            <a data-toggle="modal" data-target="modalCenter" class="nav-link disable text-white " href="#" id="connexion-icon">
+            <a data-toggle="dropdown" data-target="modalCenter" class="nav-link disable text-white dropdown-toggle" href="#" id="connexion-icon">
                 <i class="far fa-user"></i>
             </a>
         </form>
