--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
 <%= render "devise/shared/links" %>
 <hr>
 -->
-<div class="modal" tabindex="-1" role="dialog">
+<div class="modal modal-fade" id="signupModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
