--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,8 @@
             </li>
         </ul>
 
+        
+
         <form class="form-inline mt-2 mt-md-0">
             <a class="text-white nav-link" href="cart.html">
                 <i class="text-warning fas fa-shopping-cart"> </i> Shopping Cart
@@ -23,10 +25,14 @@
 
             <div class="dropdown">
                 <ul class="dropdown-menu">
-                  <div style="text-align: center;">Connexion</div>
-                  <div class="dropdown-divider"></div>
-                  <li><a href="#"  id="log-in" data-toggle="modal" data-target="#signinModal">Log In</a></li>
-                  <li id="sign-up" data-toggle="modal" data-target="#signupModal"><a href="#">Sign Up</a></li>
+                    <li style="text-align: center;">Connexion</li>
+                    <li><div class="dropdown-divider"></div></li>
+                    <li id="log-in" data-toggle="modal" data-target="#signinModal">
+                        <span>Log In</span>
+                    </li>
+                    <li id="sign-up" data-toggle="modal" data-target="#signupModal">
+                       <span>Sign Up</span>
+                    </li>
                 </ul>
             </div>
             <a data-toggle="dropdown" data-target="modalCenter" class="nav-link disable text-white dropdown-toggle" href="#" id="connexion-icon">
