--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,11 @@
 -->
 
     <%= yield %>
+
+    <%= render 'layouts/sign_up_modal' %>
+    <%= render 'layouts/sign_in_modal' %>
+
+
+
   </body>
 </html>
