Updated dropdown style

--- a/app/assets/stylesheets/dropdown.scss
+++ b/app/assets/stylesheets/dropdown.scss
@@ -28,14 +28,14 @@
 
 .dropdown-menu a:hover {
 	text-decoration: none;
-	background:#a7cce5;
+	background:#e69ae0;
 	display: block;
 	text-align: center;
 }
 
 .dropdown-menu li:hover {
 	text-decoration: none;
-	background:#a7cce5;
+	background:#e69ae0;
 	display: block;
 	text-align: center;
 }
