--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,8 +26,8 @@
             <% if user_signed_in? %>
                 <div class="dropdown">
                     <ul class="dropdown-menu">
-                        <li style="text-align: center;">Connexion</li>
-                        <li><div class="dropdown-divider"></div></li>
+                        <!-- <li style="text-align: center;">Connexion</li> -->
+                       <!--  <li><div class="dropdown-divider"></div></li> -->
                         <li>
                             <%= link_to "Mon profil", user_path(current_user.id), data: { method: "get"}, class: "dropdown-item" %>
                         </li>
