--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top newColorPurple text-white">
-    <a href="#" class="text-white navbar-brand">
+    <a href="/" class="text-white navbar-brand">
         <i class="fas fa-cat"></i> Cat Store
     </a>
 
