updated modal sign_in and sign_up style

--- a/app/views/layouts/_sign_in_modal.html.erb
+++ b/app/views/layouts/_sign_in_modal.html.erb
@@ -34,14 +34,15 @@
             <div class="actions form-group">
               <%= f.submit "Log in",  class: "btn btn-block", style: "background-color: #C6CFF7;" %>
             </div>
-          <%= render "devise/shared/links" %>  <br/>
+          <%= render "devise/shared/links" %>  
+          <br/>
           <% end %> 
         </div>
       </div>
 
-      <div class="modal-footer">
+      <%# <div class="modal-footer">
         <button type="button" class="close-modal btn" style="background-color: #D7DAE6;" data-dismiss="modal">Close</button>
-      </div>
+      </div> %>
     </div>
   </div>
 </div>
