--- a/app/views/layouts/_sign_up_modal.html.erb
+++ b/app/views/layouts/_sign_up_modal.html.erb
@@ -38,9 +38,9 @@
         </div>
       </div>
 
-      <div class="modal-footer">
+      <%# <div class="modal-footer">
         <button type="button" class="close-modal btn" style="background-color: #D7DAE6;" data-dismiss="modal">Close</button>
-      </div>
+      </div> %>
     </div>
   </div>
 </div>
