--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -140,7 +140,6 @@
     color: #fff;
     background-color: #0062cc;
 }
-<<<<<<< HEAD
 .button_1{
 	height: 38px;
 	background:#e8491d;
@@ -148,16 +147,19 @@
 	padding-left: 20px;
 	/* padding-right: 20px; */
 	color:#ffff;
-	margin-right: 0%;
-=======
+    margin-right: 0%;
+}
 
 .login-form-1 .ForgetPwd {
     color: #0062cc;
     font-weight: 600;
     text-decoration: none;
->>>>>>> update_homepage_ui
 }
 
 body {
     background: #f7f7f7;
+}
+
+.btn-primary {
+    background-color: red;
 }
