--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -19,6 +20,33 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+
+    <style>
+    
+      .btn-primary {
+        background: #ac6da8;
+        border-color: #ac6da8;
+      }
+
+      .btn-outline-primary {
+        border-color: #ac6da8;
+        color: #ac6da8;
+      }
+
+      .btn-primary:hover {
+        background: #80517d;
+        border-color: #80517d;
+      }
+
+      .btn-outline-primary:hover {
+        background: #80517d;
+        border-color: #80517d;
+        color: white;
+      }
+
+
+
+    </style>
 
 
   </head>
@@ -38,6 +66,20 @@
     <%= render 'layouts/sign_in_modal' %>
 
 
+  <footer class="my-5 text-muted text-center text-small">
+    <p class="mb-1">© Cat store - 2019</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">Team</a></li>
+      <li class="list-inline-item"><a href="#">Contact us</a></li>
+      <li class="list-inline-item"><a href="#">Term</a></li>
+    </ul>
+    <%# <ul class="list-inline">
+      <li class="list-inline-item"><a href="#"><i class="fas fa-linkedin"></i></a></li>
+      <li class="list-inline-item"><a href="#">Contact us</a></li>
+      <li class="list-inline-item"><a href="#">Term</a></li>
+    </ul> %>
+
+  </footer>
 
   </body>
 </html>
