--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -3,11 +3,15 @@
         <div class="col-sm-12">
             <h1>index cart</h1>
 
-            <ul>
-                <% @cart_items.each do |ci| %>
-                    <li><%= ci.item.title %></li>    
-                <% end %>
-            </ul>
+            <% if @cart_items %>
+                <ul>
+                    <% @cart_items.each do |ci| %>
+                        <li><%= ci.item.title %></li>    
+                    <% end %>
+                </ul>
+            <% else %>
+                <h3>No items</h3>
+            <% end %>
         </div>
     </div>
 </div>
