--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
     <style>
-    
+
       .btn-primary {
         background: #ac6da8;
         border-color: #ac6da8;
@@ -44,8 +44,6 @@
         color: white;
       }
 
-
-
     </style>
 
 
@@ -66,7 +64,7 @@
     <%= render 'layouts/sign_in_modal' %>
 
 
-  <footer class="my-5 text-muted text-center text-small">
+  <footer class="footer my-5 text-muted text-center text-small">
     <p class="mb-1">© Cat store - 2019</p>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="#">Team</a></li>
