Updated with Show profil and My Profil working

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,7 @@
                         <!-- <li style="text-align: center;">Connexion</li> -->
                        <!--  <li><div class="dropdown-divider"></div></li> -->
                         <li>
-                            <%= link_to "Mon profil", user_path(current_user.id), data: { method: "get"}, class: "dropdown-item" %>
+                            <%= link_to "Mon profil", users_profil_path, data: { method: "get"}, class: "dropdown-item" %>
                         </li>
                         
                         <li>
