--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -163,3 +163,16 @@ body {
 .btn-primary {
     background-color: red;
 }
+
+.form-profil-body {
+    text-align: center;
+    height: 500px;
+    margin-top: 100px;
+}
+
+
+.logo1 {
+    width: 100px;
+    height: 100px;
+    text-align: center;
+}
