--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -35,24 +35,30 @@
             </tbody>
             </table>
 
-            <table class="table table-striped" style="margin-top: 50px;">
+            <br>
+
+            <h3>Total des produits achetés</h3>
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th> Description </th>
                         <th> Quantité</th>
                         <th> Prix</th>
                     </tr>
-                    <thead>
+                <thead>
 
-                    <tbody>
-                        <tr>
-                            <td> Total </td>
-                            <td> <%= @quantity_total %> </td>
-                            <td> <%= number_to_currency @price_total, unit: "€", separator: ",", format: "%n%u" %> </td>
+                <tbody>
+                    <tr>
+                        <td> Total </td>
+                        <td> <%= @quantity_total %> </td>
+                        <td> <%= number_to_currency @price_total, unit: "€", separator: ",", format: "%n%u" %> </td>
 
-                        </tr>
-                    </tbody>
+                    </tr>
+                </tbody>
             </table>
+
+            <%= link_to 'Passer commande', '', class: 'btn btn-primary float-right', style: 'margin-left: 5px' %> 
+            <%= link_to 'Annuler commande', class: 'btn btn-danger float-right', method: 'delete' %>
 
         </div>
     </div>
