--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h1> Contenu du panier</h1>
-            
+
              <% if @cart_items %>
                 <table class="table table-striped table-hover">
                     <thead>
@@ -32,8 +32,6 @@
             <% else %>
                 <h3>No items</h3>
             <% end %>
-        </tbody>
-    </table>
 
     <table class="table table-striped" style="margin-top: 50px;">
         <thead>
@@ -42,17 +40,17 @@
                 <th> Quantité</th>
                 <th> Prix</th>
             </tr>
-        <thead>
+        </thead>
 
         <tbody>
             <tr>
-                <td> Total </td> 
+                <td> Total </td>
                 <td> <%= @quantity_total %> </td>
                 <td> <%= number_to_currency @price_total, unit: "€", separator: ",", format: "%n%u" %> </td>
-                
+
             </tr>
         </tbody>
-    
+
     </table>
 
         </div>
