updated navbar styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,27 +22,34 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
     <style>
+        /* .nav-link, .navbar-brand {
+            color: white;
+        }
 
-      .btn-primary {
-        background: #ac6da8;
-        border-color: #ac6da8;
-      }
+        .nav-link:hover, .navbar-brand:hover {
+            color: white;
+        } */
 
-      .btn-outline-primary {
-        border-color: #ac6da8;
-        color: #ac6da8;
-      }
+        .btn-primary {
+            background: #ac6da8;
+            border-color: #ac6da8;
+        }
 
-      .btn-primary:hover {
-        background: #80517d;
-        border-color: #80517d;
-      }
+        .btn-outline-primary {
+            border-color: #ac6da8;
+            color: #ac6da8;
+        }
 
-      .btn-outline-primary:hover {
-        background: #80517d;
-        border-color: #80517d;
-        color: white;
-      }
+        .btn-primary:hover {
+            background: #80517d;
+            border-color: #80517d;
+        }
+
+        .btn-outline-primary:hover {
+            background: #80517d;
+            border-color: #80517d;
+            color: white;
+        }
 
     </style>
 
