--- a/app/assets/stylesheets/dropdown.scss
+++ b/app/assets/stylesheets/dropdown.scss
@@ -1,40 +1,34 @@
-
-.dropdown {
-	//z-index: 10;
-	position: absolute;
-	right: 100px;
-	top: 25px;	
-}
-
-.dropdown-menu li {
-	text-align: center;
-}
-
-// .dropdown-menu a {
+// .dropdown-menu li {
+// 	text-align: center;
+// }
+//
+// // .dropdown-menu a {
+// // 	color: black;
+// // 	padding: 5px 16px;
+// // 	text-decoration: none;
+// // 	display: inline-block;
+// // }
+//
+// .dropdown-menu span {
 // 	color: black;
 // 	padding: 5px 16px;
 // 	text-decoration: none;
 // 	display: inline-block;
 // }
-
-.dropdown-menu span {
-	color: black;
-	padding: 5px 16px;
-	text-decoration: none;
-	display: inline-block;
-}
-
+//
 
 .dropdown-menu a:hover {
-	text-decoration: none;
+	// text-decoration: none;
 	background:#e69ae0;
-	display: block;
-	text-align: center;
+	// display: block;
+	// right: 5px;
+    // position: relative;
+    // left: 10px;
 }
 
-.dropdown-menu li:hover {
-	text-decoration: none;
-	background:#e69ae0;
-	display: block;
-	text-align: center;
-}
+// .dropdown-menu li:hover {
+// 	text-decoration: none;
+// 	background:#e69ae0;
+// 	display: block;
+// 	text-align: center;
+// }
