--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,52 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top newColorPurple text-white">
+<nav class="navbar navbar-expand-lg fixed-top newColorPurple text-white shadow">
+  <a class="navbar-brand text-white" href="/">
+      <i class="fas fa-cat"></i> Cat Store
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active"></li>
+    </ul>
+  </div>
+
+  <ul class="navbar-nav">
+      <% if user_signed_in? %>
+      <li>
+          <a class="text-white nav-link" href="<%= carts_path %>">
+              <i class="text-warning fas fa-shopping-cart"> </i> Shopping Cart
+              <i style="color: yellow; " id="cart_n"></i>
+          </a>
+      </li>
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="far fa-user"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to "Mon profil", users_profil_path, data: { method: "get"}, class: "dropdown-item" %>
+            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
+          </div>
+      </li>
+      <% else %>
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="far fa-user"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+              <span class="dropdown-item-text">Connexion</span>
+              <div class="dropdown-divider"></div>
+              <a id="log-in" data-toggle="modal" data-target="#signinModal" class="dropdown-item" href="#">Log in</a>
+              <a id="sign-up" data-toggle="modal" data-target="#signupModal" class="dropdown-item" href="#">Sign up</a>
+          </div>
+      </li>
+      <% end %>
+  </ul>
+</nav>
+
+
+
+<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top newColorPurple text-white">
     <a href="/" class="text-white navbar-brand">
         <i class="fas fa-cat"></i> Cat Store
     </a>
@@ -9,13 +57,11 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto menu ">
-            <li class="nav-item active">
-                <a href="#" class="nav-link"> Chats</a>
-            </li>
+        <ul class="navbar-nav mr-auto menu float-right">
+            <li class="nav-item"></li>
         </ul>
 
-        
+
 
         <form class="form-inline mt-2 mt-md-0">
 
@@ -26,12 +72,10 @@
             </a>
                 <div class="dropdown">
                     <ul class="dropdown-menu">
-                        <!-- <li style="text-align: center;">Connexion</li> -->
-                       <!--  <li><div class="dropdown-divider"></div></li> -->
                         <li>
                             <%= link_to "Mon profil", users_profil_path, data: { method: "get"}, class: "dropdown-item" %>
                         </li>
-                        
+
                         <li>
                            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
                         </li>
@@ -56,4 +100,4 @@
             </a>
         </form>
     </div>
-</nav>
+</nav> -->
