--- a/app/views/users/profil.html.erb
+++ b/app/views/users/profil.html.erb
@@ -5,11 +5,11 @@
             <table class="table table-hover">
                 <tr>
                     <th>Nom</th>
-                    <td><%= @user.firstname %></td>
+                    <td><%= @user.first_name %></td>
                 </tr>
                 <tr>
                     <th>Prenom</th>
-                    <td><%= @user.lastname %></td>
+                    <td><%= @user.last_name %></td>
                 </tr>
                 <tr>
                     <th>Description</th>
