updated cart text

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
       <% if user_signed_in? %>
       <li>
           <a class="text-white nav-link" href="<%= carts_path %>">
-              <i class="text-warning fas fa-shopping-cart"> </i> Shopping Cart
+              <i class="text-warning fas fa-shopping-cart"> </i> Mon panier
               <i style="color: yellow; " id="cart_n"></i>
           </a>
       </li>
