--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,9 @@
 <!-- <h2>Edit <%= resource_name.to_s.humanize %></h2> -->
-
+<br>
     <div class="container form-pofil-body">
       <div class="row justify-content-sm-center">
         <div class="col-sm-6">
-            <%= image_tag 'identite.png', class: "logo1 offset-sm-5" %> 
+            <%= image_tag 'identite.png', class: "logo1 offset-sm-5" %>
               <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
                 <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -17,14 +17,14 @@
                 <% end %>
 
                 <div class="field">
-                  <%= f.label :firstname %><br />
-                  <%= f.text_field :firstname, autofocus: true, class: "form-control", autocomplete: "email" %>
+                  <%= f.label :first_name %><br />
+                  <%= f.text_field :first_name, autofocus: true, class: "form-control", autocomplete: "email" %>
                 </div>
 
 
                 <div class="field">
-                  <%= f.label :lastname %><br />
-                  <%= f.text_field :lastname, autofocus: true, class: "form-control", autocomplete: "email" %>
+                  <%= f.label :last_name %><br />
+                  <%= f.text_field :last_name, autofocus: true, class: "form-control", autocomplete: "email" %>
                 </div>
 
                 <div class="field">
@@ -59,10 +59,9 @@
       <div class="row justify-content-sm-center" style="margin-top: 50px;">
         <div class="col-sm-6">
           <h3 style="text-align: center;">Cancel my account</h3>
-          
+
           <p> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-lg btn-primary btn-block" %></p>
 
-        </div> 
+        </div>
       </div>
     </div>
-
