--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,16 +10,32 @@
 
       <div class="card h-100 shadow">
         <!-- <a href="#"><img class="card-img-top" src="./img/chat7.jpg" alt="" style="height:200px"></a> -->
-        <%= image_tag 'sleepcutecat.jpg', width: '100%', class: ''  %>
-        <div class="card-body">
+        <a href="<%= item_path(i.id) %>"><%= image_tag 'sleepcutecat.jpg', width: '100%', class: ''  %></a>
+        <div class="card-body" style="border-top:3px solid #ffc107;">
             <h4 class="card-title">
                 <%= i.title %>
+                <span class="float-right text-muted">$<%= i.price %></span>
             </h4>
-            <h5>$<%= i.price %></h5>
             <p class="card-text"><%= i.description %></p>
+            <%= form_tag carts_path, method: "post" do %>
+              <div class="form-row">
+                <div class="col">
+                  <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">Quantity</div>
+                    </div>
+                    <%= number_field_tag 'quantity', 1, :class => 'form-control' %>
+                    <%= hidden_field_tag 'id', i.id %>
+                  </div>
+                </div>
+              </div>
+              <%= link_to 'Voir', item_path(i.id), class: "btn btn-primary" %>
+              <%= submit_tag "Ajouter au panier", class: 'btn btn-outline-primary float-right' %>
+            <% end %>
             <span class="entourer2">
-                  <%= link_to 'Voir', item_path(i.id), class: "btn btn-primary" %>
-                  <%= link_to 'Ajouter au panier', carts_path(:id => i.id), method: 'post', class: 'btn btn-outline-primary' %>
+                  <!--
+                  <%= link_to 'Ajouter au panier', carts_path(:id => i.id), method: 'post', class: 'btn btn-outline-primary float-right' %>
+                  -->
             </span>
         </div>
         <div class="card-footer">
