--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,12 +4,9 @@
         <div class="col-sm-6">
             <%= image_tag 'sleepcutecat.jpg', width: '100%' %>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 pt-3">
+            <h3><%= @current_item.title %></h3>
             <table class="table table-hover">
-                <tr>
-                    <th>Titre</th>
-                    <td><%= @current_item.title %></td>
-                </tr>
                 <tr>
                     <th>Prix</th>
                     <td>$<%= @current_item.price %></td>
@@ -19,6 +16,24 @@
                     <td><%= @current_item.description %></td>
                 </tr>
             </table>
+            <hr>
+            <%= form_tag carts_path, method: "post" do %>
+              <div class="form-row">
+                <div class="col-4">
+                  <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">Quantity</div>
+                    </div>
+                    <%= number_field_tag 'quantity', 1, :class => 'form-control' %>
+                    <%= hidden_field_tag 'id', @current_item.id %>
+                  </div>
+                </div>
+              </div>
+              <%= submit_tag "Ajouter au panier", class: 'btn btn-outline-primary' %>
+            <% end %>
+            <!--
+            <%= link_to 'Ajouter au panier', carts_path(:id => @current_item.id), method: 'post', class: 'btn btn-outline-primary btn-block' %>
+            -->
         </div>
     </div>
 </div>
