--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
-            <%= image_tag 'sleepcutecat.jpg', width: '100%' %>
+            <%= image_tag @current_item.image_url, width: '100%' %>
         </div>
         <div class="col-sm-6 pt-3">
             <h3><%= @current_item.title %></h3>
