--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -9,20 +9,20 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr class="bg-primary text-white">
+                            <th> Image </th>
                             <th> Title </th>
                             <th> Description </th>
-                            <th> Image </th>
                             <th> Quantity</th>
-                            <th> Prix </th>
+                            <th> Prix(total) </th>
                         </tr>
                     </thead>
 
                     <tbody>
                         <% @cart_items.each do |i| %>
                             <tr>
+                                <td> <%= image_tag i.item.image_url, width: 50, class: '' %></td>
                                 <td> <%= i.item.title%> </td>
                                 <td> <%= i.item.description %> </td>
-                                <td> <%= image_tag i.item.image_url, width: 50, class: '' %></td>
                                 <td> <%= i.quantity %></td>
                                 <td> <%= number_to_currency i.item.price * i.quantity, unit: "$", separator: ",", format: "%n%u" %> </td>
                             </tr>
@@ -32,7 +32,7 @@
                             <td></td>
                             <td></td>
                             <td> <%= @quantity_total %> </td>
-                            <td> <%= number_to_currency @price_total, unit: "€", separator: ",", format: "%n%u" %> </td>
+                            <td> <%= number_to_currency @price_total, unit: "$", separator: ",", format: "%n%u" %> </td>
                         </tr>
                     </tbody>
                 </table>
