--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top newColorPurple text-white shadow">
-  <a class="navbar-brand text-white" href="/">
+  <a class="navbar-brand text-white animated shake" href="/">
       <i class="fas fa-cat"></i> Cat Store
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
   <ul class="navbar-nav">
       <% if user_signed_in? %>
       <li>
-          <a class="text-white nav-link" href="<%= carts_path %>">
+          <a id="myCart" class="text-white nav-link" href="<%= carts_path %>">
               <i class="text-warning fas fa-shopping-cart"> </i> Mon panier
               <i style="color: yellow; " id="cart_n"></i>
           </a>
